--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       Hechos a mano, a pedido y pensados para estimular la creatividad.
     </p>
 
-    <img src="foto1.jpg" alt="Juguete de madera">
-    <img src="foto2.jpg" alt="Juego artesanal">
+    <img src="Foto1.jpg" alt="Juguete de madera">
+    <img src="Foto2.jpg" alt="Juego artesanal">
 
     <div class="buttons">
       <a class="whatsapp" href="https://wa.me/5491164884598" target="_blank">
