--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <footer>
-      © Treby Arte · Hecho en madera
+      © Treby Arte · Hecho con amor
     </footer>
   </div>
 </body>
