--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <footer>
-      © Treby Arte · Hecho con amor
+      © Treby Arte · Hecho con amor para los peques
     </footer>
   </div>
 </body>
