--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: Bebas Neue;
       background: #f5f5f5;
       color: #333;
       text-align: center;
