--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Treby Arte</h1>
+    <h1>Trebyarte</h1>
     <p>
       Juguetes y juegos de madera artesanales.  
       Hechos a mano, a pedido y pensados para estimular la creatividad.
