--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <footer>
-      © Treby Arte · Hecho con amor para los peques
+      © Trebyarte · Hecho con amor para los peques
     </footer>
   </div>
 </body>
