--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     p {
       font-size: 1.1em;
     }
-    img {
-      width: 100%;
-      border-radius: 10px;
-      margin: 15px 0;
-    }
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0;
+        border-radius: 0;
+      }
     .buttons a {
       display: block;
       margin: 12px 0;
@@ -39,9 +41,6 @@
       color: white;
       border-radius: 8px;
       font-size: 1.1em;
-    }
-    .whatsapp {
-      background: #25D366;
     }
     .instagram {
       background: #C13584;
