--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       text-align: center;
     }
     .container {
-      max-width: 700px;
-      margin: auto;
-      padding: 20px;
+      width 100%;
+      max-width: none;
+      margin: 0;
+      padding: 0px;
     }
     h1 {
       margin-top: 20px;
