--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       text-align: center;
     }
     .container {
-      width 100%;
+      width: 100%;
       max-width: none;
       margin: 0;
       padding: 0px;
@@ -58,7 +58,7 @@
 
 .hero-text {
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 40px;
   transform: translateY(-50%);
   color: white;
