--- a/index.html
+++ b/index.html
@@ -76,10 +76,19 @@
   margin-top: 10px;
   font-size: 18px;
 }
+    .hero-bottom-text {
+  position: absolute;
+  bottom: 20px;
+  left: 40px;
+  color: white;
+  font-size: 14px;
+  opacity: 0.85;
+  text-shadow: 0 2px 6px rgba(0,0,0,0.6);
+}
   </style>
 </head>
 <body>
-  <div class="hero">
+<div class="hero">
   <img src="Foto1.jpg" alt="Juguete de madera">
 
   <div class="hero-text">
@@ -88,6 +97,10 @@
       Juguetes y juegos de madera artesanales.  
       Hechos a mano, a pedido y pensados para estimular la creatividad.
     </p>
+  </div>
+
+  <div class="hero-bottom-text">
+    🚧 Estamos en construcción del sitio web
   </div>
 </div>
     <div class="buttons">
