--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </div>
 
   <div class="hero-bottom-text">
-    🚧 Estamos en construcción del sitio web
+    🚧 Este sitio también se está haciendo a mano 🚧
   </div>
 </div>
     <div class="buttons">
